partial Implementation of login
Created login button that lead to log in pages based on the user (customer or staff) . However, didn't handle creating a session for when the user log in successfully.

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
 
 <body>
 {% if not message %}
-	<a href="/login">Login</a></br>
+	<a href="/customerLogin">Customer Login</a></br>
+	<a href="/staffLogin">Staff Login</a></br>
 	<a href="/customerRegister">Customer Register</a></br>
 	<a href="/staffRegister">Staff Register</a>
 	</br>
