--- a/templates/customer_login.html
+++ b/templates/customer_login.html
@@ -2,8 +2,8 @@
 <head>
 </head>
 <body>
-<form action="/loginAuth" method="POST">
-	<input type="text" name = "username" placeholder="username" required/> </br>
+<form action="/customerLoginAuth" method="POST">
+	<input type="text" name = "username" placeholder="Email Address" required/> </br>
 	<input type="password" name = "password" placeholder="password" required/></br>
 	<input type="submit" value = Login />
 	{% if error %}
