Add airplane and airport for staff

--- a/templates/home_staff.html
+++ b/templates/home_staff.html
@@ -5,6 +5,9 @@
 </head>
 <body>
     <h1>Welcome {{username}}</h1>
+	<a href="/addAirport">Add airport</a></br>
+	<a href="/addAirplane">Add airplane</a></br>
+	<a href="/addFlight">Add flight</a></br>
     <a href="/logout">Logout</a>
 </body>
 </html>
