--- a/templates/add_airport.html
+++ b/templates/add_airport.html
@@ -13,7 +13,7 @@
 		<label for="international">International</label><br>
 	<input type="radio" id="both" name="type" value="both">
 		<label for="both">Both</label><br>
-	<input type="submit" value = Add Airport />
+	<input type="submit" value = "Add Airport" />
 	{% if error %}
 		<p class="error"><strong>Error:</strong> {{error}}</p>
 	{% endif %}
