--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
 	<a href="/customerLogin">Customer Login</a></br>
 	<a href="/staffLogin">Staff Login</a></br>
 	<a href="/customerRegister">Customer Register</a></br>
-	<a href="/staffRegister">Staff Register</a>
+	<a href="/staffRegister">Staff Register</a></br>
+	<a href="/viewFlights">View Flights</a>
 	</br>
 {% endif %}
 
