--- a/templates/add_airplane.html
+++ b/templates/add_airplane.html
@@ -7,7 +7,7 @@
 	<input type="number" name = "num_seats" placeholder="number of seats" required/> </br>
 	<input type="text" name = "manu_comp" placeholder="manufacturing company" required/> </br>
 	<input type="number" name = "age" placeholder="age" required/> </br>
-	<input type="submit" value = Add Airplane />
+	<input type="submit" value = "Add Airplane" />
 	{% if error %}
 		<p class="error"><strong>Error:</strong> {{error}}</p>
 	{% endif %}
