--- a/templates/view_most_frequent_customer.html
+++ b/templates/view_most_frequent_customer.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 </head>
-<text>Below is a list of the most frequent customers within the past year: </text> </br>
+<text>Below is a list of the most frequent customers for {{ airline_name['airline_name'] }} within the past year: </text> </br>
 <style type="text/css">
 	table, th, td{
 		border: 1px solid black;
