--- a/templates/view_earned_reports_posts.html
+++ b/templates/view_earned_reports_posts.html
@@ -3,7 +3,7 @@
 </head>
 
 <h1>The total number of tickets sold between <u>{{ start_date }}</u> and <u>{{ end_date }}</u>
-    are <u>{{ data['amount'] }}</u> tickets </h1></br>
+    are <u>{{ data['amount'] }}</u> ticket(s) </h1></br>
 </br>
 
 <a href="/view_earned_reports">Go back</a>
