--- a/templates/view_flights.html
+++ b/templates/view_flights.html
@@ -59,7 +59,7 @@
 	<tr>
 		<td>{{flight['airline_name']}}</td>
 		<td>{{flight['flight_num']}}</td>
-		<td>{{flight['dept_date']}}</td>
+		<td>{{flight['dept_date']}} {{flight['dept_time']}}</td>
 		<td>{{flight['arr_date']}}</td>
 		<td>{{flight['base_price']}}</td>
 		<td>{{flight['status']}}</td>
@@ -68,12 +68,7 @@
 		<td>{{flight['return_number']}}</td>
 		<td>{{flight['return_date']}}</td>
 		{% if loggedincust %}
-		<td><button onclick="purchaseTicket{{loop.index}}()">Purchase Ticket</button></td>
-		<script>
-			function purchaseTicket{{loop.index}}() {
-				console.log("Purchasing ticket for flight " + "{{flight['flight_num']}}");
-			}
-		</script>
+		<td><button onclick="location.href = '/purchaseTicket?airline_name={{flight['airline_name']}}&flight_num={{flight['flight_num']}}&dept_date={{flight['dept_date']}}&dept_time={{flight['dept_time']}}';">Purchase Ticket</button></td>
 		{% endif %}
 	</tr>
 {% endfor %}
