Refactor to future_flights

--- a/templates/home_cust.html
+++ b/templates/home_cust.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Welcome {{username}}</h1>
-	<a href="/viewFlights">View Flights</a></br>
+	<a href="/viewFutureFlights">View Flights</a></br>
     <a href="/logout">Logout</a>
 </body>
 </html>
