--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 	<a href="/staffLogin">Staff Login</a></br>
 	<a href="/customerRegister">Customer Register</a></br>
 	<a href="/staffRegister">Staff Register</a></br>
-	<a href="/viewFlights">View Flights</a>
+	<a href="/viewFutureFlights">View Flights</a>
 	</br>
 {% endif %}
 
