--- a/templates/view_future_flights.html
+++ b/templates/view_future_flights.html
@@ -20,7 +20,7 @@
 
 <p>Otherwise, search for future flights below:</p>
 
-<form action="/searchFlightPost" method="POST">
+<form action="/searchFutureFlightsPost" method="POST">
 	<input type="text" name = "src_city" placeholder="source city"/> </br>
 	<input type="text" name = "src_airport" placeholder="source airport"/> </br>
 	<input type="text" name = "dest_city" placeholder="destination city"/> </br>
