View flights (staff) and view purchased flights (customer)

--- a/templates/home_cust.html
+++ b/templates/home_cust.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <h1>Welcome {{username}}</h1>
-	<a href="/viewFutureFlights">View Flights</a></br>
-    <a href="/logout">Logout</a>
+	<h1>Welcome {{username}}</h1>
+	<a href="/viewMyFlights">View my flights</a></br>
+	<a href="/viewFutureFlights">Search for future flights</a></br>
+	<a href="/logout">Logout</a>
 </body>
 </html>
