--- a/templates/home_staff.html
+++ b/templates/home_staff.html
@@ -9,6 +9,7 @@
 	<a href="/addAirport">Add airport</a></br>
 	<a href="/addAirplane">Add airplane</a></br>
 	<a href="/addFlight">Add flight</a></br>
+	<a href="/change_flight_status">Change Flight Status</a></br>
     <a href="/viewmostfreqcust">View frequent customers</a></br>
 	<a href="/view_part_customer">View a particular customer's past flights</a></br>
 	<a href="/view_earned_reports">View Earned reports</a></br>
