minor fix to change_flight_status.html

--- a/templates/change_flight_status.html
+++ b/templates/change_flight_status.html
@@ -37,7 +37,7 @@
     <text>Please select the new status of flight: </text></br>
     <input type="radio" name="status" value="On Time"> On Time </br>
     <input type="radio" name="status" value="Delayed"> Delayed </br>
-    <input type="radio" name="status" value="Canceled"> Canceled </br>
+    <input type="radio" name="status" value="Cancelled"> Cancelled </br>
 	<input type="submit" value = submit />
     {% if error %}
 		<p class="error"><strong>Error:</strong> {{error}}</p>
