fix minor details

--- a/templates/purchase_ticket.html
+++ b/templates/purchase_ticket.html
@@ -25,6 +25,7 @@
 
 	<input type="text" name = "card_number" placeholder="Card Number" required/></br>
 	<input type="text" name = "card_name" placeholder="Card Name" required/></br>
+	<p>Card Expiration Date</p>
 	<input type="date" name = "card_date" placeholder="Card Date" required/> </br>
 
 	<input type="submit" value = "Purchase ticket" />
