--- a/templates/home_cust.html
+++ b/templates/home_cust.html
@@ -7,6 +7,7 @@
 	<h1>Welcome {{username}}</h1>
 	<a href="/viewMyFlights">View my flights</a></br>
 	<a href="/viewFutureFlights">Search for future flights</a></br>
+	<a href="/trackSpending">Track spending</a></br>
 	<a href="/logout">Logout</a>
 </body>
 </html>
