--- a/templates/view_particular_customer_post.html
+++ b/templates/view_particular_customer_post.html
@@ -27,6 +27,10 @@
         <th>Dept Airport Name</th>
         <th>Arrival Airport Name</th>
         <th>Airplane ID</th>
+        <th>Return flight num</th>
+        <th>Return flight date</th>
+        <th>Return flight time</th>
+
 
     {% for line in data %}
         <tr>
@@ -41,6 +45,9 @@
             <td>{{line['dept_airport_name']}}</td>
             <td>{{line['arrival_airport_name']}}</td>
             <td>{{line['airplane_id']}}</td>
+            <td>{{line['return_flight_num']}}</td>
+            <td>{{line['return_flight_date']}}</td>
+            <td>{{line['return_flight_time']}}</td>
         </tr>
     {% endfor %}
     </table>
