--- a/templates/staff_register.html
+++ b/templates/staff_register.html
@@ -8,6 +8,7 @@
 	<input type="text" name = "first name" placeholder="First name" required/> </br>
 	<input type="text" name = "last name" placeholder="Last name" required/> </br>
 	<input type="text" name = "airline name" placeholder="Airline name" required/> </br>
+	<text>If you have multiple emails or phone numbers, please use commas to separate them</text> </br>
 	<input type="text" name = "phonenum" placeholder="Phone number ex:9175553333, 9177771111, ..." required/> </br>
 	<input type="text" name = "email" placeholder="Email ex:jet@hotmail.com, super@hotmail.com" required/> </br>
 	<text>Date of Birth </text>
